--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -15,7 +15,7 @@ libsass==0.20.1
 mccabe==0.6.1
 mypy-extensions==0.4.3
 pathspec==0.8.0
-# Pillow==7.2.0
+Pillow==7.2.0
 pip-tools==5.3.1
 psycopg2-binary==2.8.6
 pycodestyle==2.6.0
