--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Miniconda3\\envs\\env\\python.exe"
+    "python.pythonPath": "c:\\Miniconda3\\envs\\env\\python.exe"
 }
